# nonebot_plugin_wws_uid

./: .env.dev  __init__.py  bot.py  config.py  data_source.py  database.py  models.py  pyproject.toml  readme.md  requirements.txt
src/: .env  bot.py  requirements.txt
src/WutheringWavesUID/: __init__.py  config.py  database.py  models.py  web_routes.py
src/WutheringWavesUID/adapters/: __init__.py  onebot_v11.py  onebot_v12.py
src/WutheringWavesUID/core_logic/: __init__.py  api.py  models.py  resource.py
src/WutheringWavesUID/handlers/: __init__.py  login.py  user.py
src/WutheringWavesUID/protocols/: __init__.py  onebot_v11.py
src/WutheringWavesUID/sayu_protocol/: pack.py
src/WutheringWavesUID/utils/: cache.py  login_helpers.py
src/plugins/WutheringWavesUID/: __init__.py  cache.py  client.py  config.py  database.py  gsuid_core_compat.py  models.py  web_routes.py
src/plugins/WutheringWavesUID/adapters/: __init__.py  onebot_v11.py
src/plugins/WutheringWavesUID/entity/: __init__.py
src/plugins/WutheringWavesUID/handlers/: __init__.py  abyss.py  alias.py  announcement.py  bind.py  calendar.py  character.py  character_list.py  code.py  config.py  echo_list.py  explore.py  gacha.py  (+15 more)
src/plugins2/: __init__.py  client.py  config.py  gsuid_core_compat.py
src/temp/: client.py
src/temp/protocols/: __init__.py  onebot_v11.py
src/temp/sayu_protocol/: gs_client.py
wws_native/: config.py  database.py  models.py
wws_native/adapters/: __init__.py  onebot_v11.py  onebot_v12.py
wws_native/handlers/: __init__.py  bind.py  char_info.py  char_list.py  help.py
(+94 files in other folders)
