[project]
name = "test-waves-bot"
version = "0.1.0"
description = "鸣潮插件测试环境"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.nonebot]
plugins = ["nonebot_plugin_datastore"]  # 显式声明数据存储插件
plugin_dirs = ["plugins"]

[tool.nonebot.adapter]
onebot_v11 = { "driver": "~fastapi" }

[tool.nonebot.plugins.datastore]
database_url = "sqlite+aiosqlite:///./data/bot.db"
echo = true  # 显示SQL日志，便于调试